crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__derive_auto_ip_network_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    sqlx_postgres::row::PgRow {
        "id": 1,
        "network": V4(
            Ipv4Network {
                addr: 10.0.0.0,
                prefix: 8,
            },
        ),
    },
    sqlx_postgres::row::PgRow {
        "id": 2,
        "network": NULL,
    },
]
