crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__derive_convert_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    sqlx_postgres::row::PgRow {
        "id": 1,
        "count": 42,
    },
    sqlx_postgres::row::PgRow {
        "id": 2,
        "count": 1000,
    },
]
