crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__derive_inferred_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    sqlx_postgres::row::PgRow {
        "id": 1,
        "label": "hello",
        "value": 1.5,
        "ts": 2024-06-01T10:00:00Z,
        "ts_tz": 2024-06-01T10:00:00Z,
    },
    sqlx_postgres::row::PgRow {
        "id": 2,
        "label": NULL,
        "value": 2.5,
        "ts": 2024-06-01T11:00:00Z,
        "ts_tz": 2024-06-01T11:00:00Z,
    },
]
