crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__derive_via_and_overrides_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    PgRow {
        id: 1,
        inet: V4(
            Ipv4Network {
                addr: 10.0.0.1,
                prefix: 32,
            },
        ),
        cidr: V4(
            Ipv4Network {
                addr: 10.0.0.0,
                prefix: 24,
            },
        ),
        net_inet: V4(
            Ipv4Network {
                addr: 192.168.1.0,
                prefix: 24,
            },
        ),
        net_cidr: V4(
            Ipv4Network {
                addr: 192.168.1.0,
                prefix: 24,
            },
        ),
    },
    PgRow {
        id: 2,
        inet: NULL,
        cidr: NULL,
        net_inet: NULL,
        net_cidr: NULL,
    },
]
