crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__event_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    sqlx_postgres::row::PgRow {
        "id": 1,
        "label": "startup",
        "ts": 2024-01-15T12:00:00Z,
    },
    sqlx_postgres::row::PgRow {
        "id": 2,
        "label": NULL,
        "ts": 2024-01-15T13:00:00Z,
    },
]
