crates/libs/sqlx-pg-copy-helper/tests/snapshots/derive_macro__other_types_insert_and_fetch.snap
---
source: crates/libs/sqlx-pg-copy-helper/tests/derive_macro.rs
expression: fetched
---
[
    sqlx_postgres::row::PgRow {
        "day": 2024-06-01,
        "float_value": 1.5,
    },
    sqlx_postgres::row::PgRow {
        "day": 2024-06-02,
        "float_value": 2.5,
    },
]
